Refactor jlink options in pom.xml